Update API calls

--- a/AadMultiApis/MultiAADWebApi/appsettings.json
+++ b/AadMultiApis/MultiAADWebApi/appsettings.json
@@ -3,7 +3,8 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "damienbodhotmail.onmicrosoft.com",
     "TenantId": "7ff95b15-dc21-4ba6-bc92-824856578fc1",
-    "ClientId": "967925d5-87ea-46e6-b0eb-1223c001fd77"
+    "ClientId": "b178f3a5-7588-492a-924f-72d7887b7e48", // test single
+    //"ClientId": "967925d5-87ea-46e6-b0eb-1223c001fd77" // test multi
   },
   "AzureADSingleApi": {
     "Instance": "https://login.microsoftonline.com/",
