--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/AadMultiApis/_logs-MultiAADWebApi.txt
+/AadMultiApis/_logs-TestMultiApis.txt
