--- a/AadMultiApis/TestMultiApis/appsettings.json
+++ b/AadMultiApis/TestMultiApis/appsettings.json
@@ -7,9 +7,17 @@
     "CallbackPath": "/signin-oidc",
     "SignedOutCallbackPath ": "/signout-callback-oidc"
   },
-  "MyApiOne": {
+  "AzureADSingleApi": {
     "ScopeForAccessToken": "api://b2a09168-54e2-4bc4-af92-a710a64ef1fa/access_as_user",
     "ApiBaseAddress": "https://localhost:44342"
+  },
+  "AzureADMultiApi": {
+    "ClientId": "b178f3a5-7588-492a-924f-72d7887b7e48",
+    // "ClientSecret": "--in-user-secrets--",
+    // Authority Guid = tenanant ID
+    "Authority": "https://login.microsoftonline.com/7ff95b15-dc21-4ba6-bc92-824856578fc1",
+    "ApiBaseAddress": "https://localhost:44342",
+    "Scope": "api://b178f3a5-7588-492a-924f-72d7887b7e48/.default"
   },
   "Logging": {
     "LogLevel": {
