--- a/AadMultiApis/TestMultiApis/appsettings.json
+++ b/AadMultiApis/TestMultiApis/appsettings.json
@@ -12,13 +12,14 @@
     "ApiBaseAddress": "https://localhost:44342"
   },
   "AzureADMultiApi": {
-    "ClientId": "b178f3a5-7588-492a-924f-72d7887b7e48", // test single application client cc
-    //"ClientId": "967925d5-87ea-46e6-b0eb-1223c001fd77" // test multi application client cc
+    //"ClientId": "b178f3a5-7588-492a-924f-72d7887b7e48", // test single application client cc
+    //"Scope": "api://b178f3a5-7588-492a-924f-72d7887b7e48/.default",
+    "ClientId": "967925d5-87ea-46e6-b0eb-1223c001fd77", // test multi application client cc
+    "Scope": "api://967925d5-87ea-46e6-b0eb-1223c001fd77/.default",
     // "ClientSecret": "--in-user-secrets--",
     // Authority Guid = tenanant ID
     "Authority": "https://login.microsoftonline.com/7ff95b15-dc21-4ba6-bc92-824856578fc1",
-    "ApiBaseAddress": "https://localhost:44342",
-    "Scope": "api://b178f3a5-7588-492a-924f-72d7887b7e48/.default"
+    "ApiBaseAddress": "https://localhost:44342"
   },
   "Logging": {
     "LogLevel": {
