--- a/MultiIdentityProvider/WebApi/WebApi.csproj
+++ b/MultiIdentityProvider/WebApi/WebApi.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Identity.Web" Version="2.9.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="4.3.0" />
     <PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="4.3.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
