--- a/MultiIdentityProvider/WebApi/appsettings.json
+++ b/MultiIdentityProvider/WebApi/appsettings.json
@@ -11,11 +11,13 @@
   },
   "ValidAudiences": [
     "b2a09168-54e2-4bc4-af92-a710a64ef1fa",
-    "https://auth0-api1"
+    "https://auth0-api1",
+    "rs_dataEventRecordsApi" // OpenIddict
   ],
   "ValidIssuers": [
     "https://login.microsoftonline.com/7ff95b15-dc21-4ba6-bc92-824856578fc1/v2.0",
-    "https://dev-damienbod.eu.auth0.com/"
+    "https://dev-damienbod.eu.auth0.com/",
+    "https://localhost:44318/"
   ],
   "Logging": {
     "Debug": {
