Update application startup

--- a/MultiIdentityProvider/WebApi/appsettings.json
+++ b/MultiIdentityProvider/WebApi/appsettings.json
@@ -19,15 +19,14 @@
     "https://dev-damienbod.eu.auth0.com/",
     "https://localhost:44318/"
   ],
-  "Logging": {
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
       }
     }
   }
