Update Razor UI start process

--- a/MultiIdentityProvider/RazorAuth0Client/appsettings.json
+++ b/MultiIdentityProvider/RazorAuth0Client/appsettings.json
@@ -5,11 +5,15 @@
   //  "ClientId": "--in-secrets--",
   //  "ClientSecret": "--in-secrets--"
   //}
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
