Update startup in Razor AAD project

--- a/MultiIdentityProvider/RazorAzureADClient/appsettings.json
+++ b/MultiIdentityProvider/RazorAzureADClient/appsettings.json
@@ -11,11 +11,15 @@
     "ScopeForAccessToken": "api://b2a09168-54e2-4bc4-af92-a710a64ef1fa/access_as_user",
     "ApiBaseAddress": "https://localhost:44342"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
