--- a/MultiIdentityProvider/IdentityProvider/appsettings.json
+++ b/MultiIdentityProvider/IdentityProvider/appsettings.json
@@ -9,11 +9,15 @@
     "TimestampDriftTolerance": 300000,
     "MDSAccessKey": null
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
