Update start up

--- a/AadMultiApis/MultiAADWebApi/appsettings.json
+++ b/AadMultiApis/MultiAADWebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AzureADMultiApi": {
-    "Instance": "https://login.microsoftonline.com/", 
+    "Instance": "https://login.microsoftonline.com/",
     "Domain": "damienbodhotmail.onmicrosoft.com",
     "TenantId": "7ff95b15-dc21-4ba6-bc92-824856578fc1",
     //"ClientId": "b178f3a5-7588-492a-924f-72d7887b7e48" // test single application client cc
@@ -12,15 +12,14 @@
     "TenantId": "7ff95b15-dc21-4ba6-bc92-824856578fc1",
     "ClientId": "b2a09168-54e2-4bc4-af92-a710a64ef1fa"
   },
-  "Logging": {
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
       }
     }
   }
