Update start up

--- a/AadMultiApis/TestMultiApis/appsettings.json
+++ b/AadMultiApis/TestMultiApis/appsettings.json
@@ -22,11 +22,15 @@
     "Authority": "https://login.microsoftonline.com/7ff95b15-dc21-4ba6-bc92-824856578fc1",
     "ApiBaseAddress": "https://localhost:44342"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore.Authentication": "Debug",
+        "System": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
