--- a/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Properties/launchSettings.json
+++ b/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RazorAzureAD": {
+    "RazorMicrosoftEntraID": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
