--- a/MultiIdentityProvider/IdentityProvider/IdentityProvider.csproj
+++ b/MultiIdentityProvider/IdentityProvider/IdentityProvider.csproj
@@ -22,12 +22,9 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.2.1" />
     <PackageReference Include="OpenIddict.Quartz" Version="6.2.1" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
-    <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
-    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
