--- a/MultiIdentityProvider/WebApi/WebApi.csproj
+++ b/MultiIdentityProvider/WebApi/WebApi.csproj
@@ -11,10 +11,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
 
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
-    <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
-    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
   </ItemGroup>
 
 
