--- a/MicrosoftEntraIDMultiApis/MultiMicrosoftEntraIDWebApi/Properties/launchSettings.json
+++ b/MicrosoftEntraIDMultiApis/MultiMicrosoftEntraIDWebApi/Properties/launchSettings.json
@@ -1,21 +1,5 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "https://localhost:44342/",
-      "sslPort": 44342
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "index.html",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -23,7 +7,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:19039/"
+      "applicationUrl": "https://localhost:44342/"
     }
   }
 }
