--- a/MultiIdentityProvider/WebApi/Properties/launchSettings.json
+++ b/MultiIdentityProvider/WebApi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "Index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
